Submenu z-index fix

--- a/scss/layout/header/_nav.scss
+++ b/scss/layout/header/_nav.scss
@@ -32,6 +32,7 @@
 		position: absolute;
 		top: 100%;
 		right: 0;
+		z-index: 999;
 	}
 
 	&:hover ul,
